# grpc-python

./: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  init_db.py  makefile  pyproject.toml  server.dockerfile
protos/: my_service.proto  simple_service.proto
scripts/: docker-entrypoint.sh
src/: client.py  my_service_pb2.py  rest_client.py  rest_server.py  server.py  simple_service_pb2.py  simple_service_pb2_grpc.py
src/my/: my_service_pb2_grpc.py
