[tool.poetry]
name = "grpc-python"
version = "0.1.0"
description = "try out grpc things"
authors = ["ratulr <ratul.reach@outlook.com>"]
license = "mpl-2.0"
readme = "README.md"
packages = [{include = "grpc_python"}]

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
fastapi = {extras = ["all"], version = "^0.110.1"}
typer = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
